tests/files/type_checker_tests/should_pass/002.cmdr
//Should allow using function variables after functions if not set before
add(x, y) {
	return x + y;
}
x = 3;