tests/files/type_checker_tests/should_fail/217.cmdr
//Should not allow using function defined variables outside functions
fn add(x, y) {
	a = 3;
	return x + y;
}
println a;